# apps/api/src/app.module.ts
@@ -2,12 +2,14 @@ import { Module } from '@nestjs/common';
 import { AppController } from './app.controller.js';
 import { AuthModule } from './auth/auth.module.js';
 import { DatabaseModule } from './database/database.module.js';
+import { LearnersController } from './learners/learners.controller.js';
+import { LearnersService } from './learners/learners.service.js';
 import { UsersController } from './users/users.controller.js';
 import { UsersService } from './users/users.service.js';
 
 @Module({
   imports: [AuthModule, DatabaseModule],
-  controllers: [AppController, UsersController],
-  providers: [UsersService],
+  controllers: [AppController, LearnersController, UsersController],
+  providers: [LearnersService, UsersService],
 })
 export class AppModule {}
